--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,8 +11,8 @@ android {
         applicationId "com.guru.translate.translator.pro.translation.keyboard.translator"
         minSdkVersion 24
         targetSdkVersion 33
-        versionCode 7
-        versionName '2.4'
+        versionCode 10
+        versionName '2.7'
     }
 
     buildTypes {
@@ -87,6 +87,10 @@ dependencies {
     implementation 'androidx.test.ext:junit-ktx:1.1.3'
 
     implementation 'com.google.android.gms:play-services-ads:21.5.0'
+    implementation 'com.google.android.play:review:2.0.1'
+
+    // For Kotlin users also add the Kotlin extensions library for Play In-App Review:
+    implementation 'com.google.android.play:review-ktx:2.0.1'
 
     implementation "com.android.billingclient:billing-ktx:5.1.0"
 
