--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,10 +9,10 @@ android {
 
     defaultConfig {
         applicationId "com.guru.translate.translator.pro.translation.keyboard.translator"
-        minSdkVersion 24
+        minSdkVersion 27
         targetSdkVersion 33
-        versionCode 10
-        versionName '2.7'
+        versionCode 12
+        versionName '2.9'
     }
 
     buildTypes {
@@ -127,6 +127,8 @@ dependencies {
     implementation(platform("org.jetbrains.kotlin:kotlin-bom:1.8.0"))
 
     api 'com.theartofdev.edmodo:android-image-cropper:2.8.0'
+
+    implementation 'com.google.android.ump:user-messaging-platform:2.1.0'
 
 }
 
