--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,12 +5,12 @@ apply plugin: 'com.google.firebase.crashlytics'
 apply plugin: 'com.google.gms.google-services'
 
 android {
-    compileSdkVersion 33
+    compileSdkVersion 34
 
     defaultConfig {
         applicationId "com.guru.translate.translator.pro.translation.keyboard.translator"
         minSdkVersion 27
-        targetSdkVersion 33
+        targetSdkVersion 34
         versionCode 12
         versionName '2.9'
     }
@@ -51,11 +51,21 @@ android {
     androidResources {
         noCompress 'dict'
     }
+
+
+    buildFeatures {
+        viewBinding true
+    }
+    bundle {
+        language {
+            enableSplit = false
+        }
+    }
 }
 
 dependencies {
     implementation 'androidx.core:core-ktx:1.9.0'
-    implementation 'com.google.android.material:material:1.9.0-alpha02'
+    implementation 'com.google.android.material:material:1.8.0'
     implementation 'androidx.appcompat:appcompat:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'com.google.code.findbugs:jsr305:3.0.2'
@@ -129,6 +139,7 @@ dependencies {
     api 'com.theartofdev.edmodo:android-image-cropper:2.8.0'
 
     implementation 'com.google.android.ump:user-messaging-platform:2.1.0'
+    implementation 'androidx.activity:activity:1.9.0'
 
 }
 
