--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="org.dslul.openboard.inputmethod.latin">
+    package="org.dslul.openboard.inputmethod.latin" >
 
     <uses-feature
         android:name="android.hardware.camera"
@@ -12,14 +12,13 @@
     <uses-permission android:name="android.permission.WRITE_USER_DICTIONARY" />
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
     <uses-permission android:name="android.permission.CAMERA" />
-
+    <uses-permission android:name="android.permission.READ_MEDIA_IMAGES" />
     <uses-permission
         android:name="android.permission.WRITE_EXTERNAL_STORAGE"
         android:maxSdkVersion="29" />
-
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-
-    <uses-permission android:name="android.permission.READ_MEDIA_IMAGES" />
+    <uses-permission
+        android:name="android.permission.READ_EXTERNAL_STORAGE"
+        android:maxSdkVersion="32" />
 
     <permission
         android:name="org.dslul.openboard.inputmethod.latin.HIDE_SOFT_INPUT"
@@ -36,19 +35,23 @@
         android:requestLegacyExternalStorage="true"
         android:resizeableActivity="false"
         android:roundIcon="@mipmap/ic_launcher_round"
-        android:supportsRtl="true">
+        android:supportsRtl="true" >
+        <activity
+            android:name="org.dslul.openboard.translator.pro.NewDashboardActivity"
+            android:exported="false"
+            android:theme="@style/Theme.TranslatorGuru"/>
         <activity
             android:name="org.dslul.openboard.translator.pro.ViewTranslatedTextActivity"
             android:exported="false"
-            android:theme="@style/Theme.TranslatorGuru"/>
+            android:theme="@style/Theme.TranslatorGuru" />
         <activity
             android:name="org.dslul.openboard.translator.pro.ConversationActivity"
             android:exported="false"
-            android:theme="@style/Theme.TranslatorGuru"/>
+            android:theme="@style/Theme.TranslatorGuru" />
         <activity
             android:name="org.dslul.openboard.translator.pro.PreSplashScreenActivity"
             android:exported="true"
-            android:theme="@style/ForSplash">
+            android:theme="@style/ForSplash" >
             <intent-filter>
                 <action
                     android:name="android.intent.action.MAIN"
@@ -64,7 +67,7 @@
             android:name="org.dslul.openboard.translator.pro.CameraTranslationActivity"
             android:exported="false"
             android:screenOrientation="portrait"
-            android:theme="@style/Theme.TranslatorGuru">
+            android:theme="@style/Theme.TranslatorGuru" >
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
@@ -73,7 +76,7 @@
             android:name="org.dslul.openboard.translator.pro.OCRActivity"
             android:exported="false"
             android:screenOrientation="portrait"
-            android:theme="@style/Theme.TranslatorGuru">
+            android:theme="@style/Theme.TranslatorGuru" >
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
@@ -83,7 +86,7 @@
             android:name="androidx.core.content.FileProvider"
             android:authorities="${applicationId}.provider"
             android:exported="false"
-            android:grantUriPermissions="true">
+            android:grantUriPermissions="true" >
             <meta-data
                 android:name="android.support.FILE_PROVIDER_PATHS"
                 android:resource="@xml/provider_paths" />
@@ -93,7 +96,7 @@
             android:directBootAware="true"
             android:exported="true"
             android:label="@string/english_ime_name"
-            android:permission="android.permission.BIND_INPUT_METHOD">
+            android:permission="android.permission.BIND_INPUT_METHOD" >
             <intent-filter>
                 <action android:name="android.view.InputMethod" />
             </intent-filter>
@@ -106,7 +109,7 @@
             android:name=".spellcheck.TranslatorProSpellCheckerService"
             android:exported="true"
             android:label="@string/spell_checker_service_name"
-            android:permission="android.permission.BIND_TEXT_SERVICE">
+            android:permission="android.permission.BIND_TEXT_SERVICE" >
             <intent-filter>
                 <action android:name="android.service.textservice.SpellCheckerService" />
             </intent-filter>
@@ -114,13 +117,12 @@
             <meta-data
                 android:name="android.view.textservice.scs"
                 android:resource="@xml/spellchecker" />
-
         </service> <!-- Activities -->
         <activity
             android:name="org.dslul.openboard.translator.pro.DisplayHistoryActivity"
             android:exported="false"
             android:screenOrientation="portrait"
-            android:theme="@style/Theme.TranslatorGuru">
+            android:theme="@style/Theme.TranslatorGuru" >
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
@@ -129,7 +131,7 @@
             android:name="org.dslul.openboard.translator.pro.DisplayFavoritesActivity"
             android:exported="false"
             android:screenOrientation="portrait"
-            android:theme="@style/Theme.TranslatorGuru">
+            android:theme="@style/Theme.TranslatorGuru" >
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
@@ -138,7 +140,7 @@
             android:name="org.dslul.openboard.translator.pro.LanguageSelectorActivity"
             android:exported="false"
             android:screenOrientation="portrait"
-            android:theme="@style/Theme.TranslatorGuru">
+            android:theme="@style/Theme.TranslatorGuru" >
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
@@ -147,7 +149,7 @@
             android:name="org.dslul.openboard.translator.pro.TranslateActivity"
             android:exported="false"
             android:screenOrientation="portrait"
-            android:theme="@style/Theme.TranslatorGuru">
+            android:theme="@style/Theme.TranslatorGuru" >
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
@@ -156,7 +158,7 @@
             android:name="org.dslul.openboard.translator.pro.DashboardActivity"
             android:exported="false"
             android:screenOrientation="portrait"
-            android:theme="@style/Theme.TranslatorGuru">
+            android:theme="@style/Theme.TranslatorGuru" >
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
@@ -165,7 +167,7 @@
             android:name="org.dslul.openboard.translator.pro.TranslateInterstitialActivity"
             android:exported="false"
             android:screenOrientation="portrait"
-            android:theme="@style/Theme.Transparent">
+            android:theme="@style/Theme.Transparent" >
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
@@ -174,7 +176,7 @@
             android:name="org.dslul.openboard.translator.pro.PhrasebookDetailedActivity"
             android:exported="false"
             android:screenOrientation="portrait"
-            android:theme="@style/Theme.TranslatorGuru">
+            android:theme="@style/Theme.TranslatorGuru" >
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
@@ -183,7 +185,7 @@
             android:name="org.dslul.openboard.translator.pro.PhrasesActivity"
             android:exported="false"
             android:screenOrientation="portrait"
-            android:theme="@style/Theme.TranslatorGuru">
+            android:theme="@style/Theme.TranslatorGuru" >
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
@@ -192,7 +194,7 @@
             android:name="org.dslul.openboard.translator.pro.PremiumScreenActivity"
             android:exported="false"
             android:screenOrientation="portrait"
-            android:theme="@style/Theme.TranslatorGuru">
+            android:theme="@style/Theme.TranslatorGuru" >
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
@@ -201,7 +203,7 @@
             android:name="org.dslul.openboard.translator.pro.ProActivity"
             android:exported="false"
             android:screenOrientation="portrait"
-            android:theme="@style/Theme.TranslatorGuru">
+            android:theme="@style/Theme.TranslatorGuru" >
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
@@ -210,7 +212,7 @@
             android:name="org.dslul.openboard.translator.pro.ProScreenActivity"
             android:exported="false"
             android:screenOrientation="portrait"
-            android:theme="@style/Theme.TranslatorGuru">
+            android:theme="@style/Theme.TranslatorGuru" >
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
@@ -219,7 +221,7 @@
             android:name="org.dslul.openboard.translator.pro.SettingsActivity"
             android:exported="false"
             android:screenOrientation="portrait"
-            android:theme="@style/Theme.TranslatorGuru">
+            android:theme="@style/Theme.TranslatorGuru" >
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
@@ -227,7 +229,7 @@
         <activity
             android:name="org.dslul.openboard.translator.pro.EnableKeyboardActivity"
             android:exported="false"
-            android:theme="@style/Theme.Transparent">
+            android:theme="@style/Theme.Transparent" >
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
@@ -249,7 +251,7 @@
             android:label="@string/english_ime_name"
             android:launchMode="singleTask"
             android:noHistory="true"
-            android:theme="@style/platformActivityTheme">
+            android:theme="@style/platformActivityTheme" >
 
             <!-- <intent-filter> -->
             <!-- <action android:name="android.intent.action.MAIN" /> -->
@@ -266,7 +268,7 @@
             android:clearTaskOnLaunch="true"
             android:exported="true"
             android:label="@string/english_ime_name"
-            android:theme="@style/platformActivityTheme">
+            android:theme="@style/platformActivityTheme" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
             </intent-filter>
@@ -276,7 +278,7 @@
             android:excludeFromRecents="true"
             android:exported="true"
             android:label="@string/ime_settings"
-            android:theme="@style/platformActivityTheme">
+            android:theme="@style/platformActivityTheme" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
             </intent-filter>
@@ -285,7 +287,7 @@
             android:name=".spellcheck.SpellCheckerSettingsActivity"
             android:exported="true"
             android:label="@string/android_spell_checker_settings"
-            android:theme="@style/platformActivityTheme">
+            android:theme="@style/platformActivityTheme" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
             </intent-filter>
@@ -295,7 +297,7 @@
             android:exported="false" /> <!-- Broadcast receivers -->
         <receiver
             android:name=".SystemBroadcastReceiver"
-            android:exported="true">
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MY_PACKAGE_REPLACED" />
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
@@ -305,7 +307,7 @@
         </receiver>
         <receiver
             android:name=".DictionaryPackInstallBroadcastReceiver"
-            android:exported="false">
+            android:exported="false" >
             <intent-filter>
                 <action android:name="org.dslul.openboard.inputmethod.dictionarypack.aosp.UNKNOWN_CLIENT" />
             </intent-filter>
