--- a/app/build.gradle
+++ b/app/build.gradle
@@ -141,6 +141,8 @@ dependencies {
     implementation 'com.google.android.ump:user-messaging-platform:2.1.0'
     implementation 'androidx.activity:activity:1.9.0'
 
+    implementation("com.facebook.shimmer:shimmer:0.5.0")
+
 }
 
 repositories {
