Splash App Open Ad and Pangle integration.

--- a/build.gradle
+++ b/build.gradle
@@ -22,7 +22,9 @@ allprojects {
         jcenter()
         mavenCentral()
 
-
+        maven {
+            url = uri("https://artifact.bytedance.com/repository/pangle/")
+        }
         maven { url "https://jitpack.io" }
     }
 }
