--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -53,6 +53,10 @@
             android:exported="false"
             android:theme="@style/Theme.TranslatorGuru" />
         <activity
+            android:name="org.dslul.openboard.translator.pro.PremiumScreenActivity"
+            android:exported="false"
+            android:theme="@style/Theme.TranslatorGuru" />
+        <activity
             android:name="org.dslul.openboard.translator.pro.ViewTranslatedTextActivity"
             android:exported="false"
             android:theme="@style/Theme.TranslatorGuru" />
