--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,8 +11,8 @@ android {
         applicationId "com.guru.translate.translator.pro.translation.keyboard.translator"
         minSdkVersion 27
         targetSdkVersion 34
-        versionCode 40
-        versionName '3.3.0'
+        versionCode 41
+        versionName '3.3.1'
     }
 
     buildTypes {
@@ -139,7 +139,6 @@ dependencies {
     api 'com.theartofdev.edmodo:android-image-cropper:2.8.0'
 
     implementation 'com.google.android.ump:user-messaging-platform:2.1.0'
-    implementation 'androidx.activity:activity-ktx:1.9.0'
 
     implementation("com.facebook.shimmer:shimmer:0.5.0")
 
@@ -148,6 +147,7 @@ dependencies {
     implementation("com.google.ads.mediation:pangle:6.0.0.8.0")
 
     implementation "com.google.guava:guava:31.0.1-android"
+    implementation 'androidx.activity:activity:1.9.1'
 
 
 }
